--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "coverage": "vitest run --coverage"
     },
     "devDependencies": {
+        "@assetpack/cli": "^0.8.0",
+        "@assetpack/core": "^0.8.0",
         "@sveltejs/vite-plugin-svelte": "^2.0.4",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/svelte": "^4.0.1",
