--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
         "src/**/*.d.ts",
         "src/**/*.ts",
         "src/**/*.js",
-        "src/**/*.svelte",
-        "svelte.config.js"
+        "src/**/*.svelte"
     ],
+
     "references": [{ "path": "./tsconfig.node.json" }]
 }
