--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "type": "module",
-    "author": "Chiemeka Madufor",
+    "author": "Rey M",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
